# pdoc-1

./: setup.cfg  setup.py
pdoc/: cli.py  json.py  module_to_json.py
