[metadata]
name=pdoc3
author=Andrew Gallant
license=AGPL-3.0
description=Auto-generate API documentation for Python projects.
long_description=file:README.md
long_description_content_type=text/markdown
url=https://pdoc3.github.io/pdoc/

python_requires = '>= 3.5'

provides=pdoc
obsoletes=pdoc

classifiers=
  "Topic :: Documentation"
  "Topic :: Software Development :: Documentation"
  "Topic :: Utilities"
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)"
  "Development Status :: 5 - Production/Stable"
  "Environment :: Console"
  "Intended Audience :: Developers"
  "Operating System :: OS Independent"
  'Programming Language :: Python :: 3 :: Only'

project_urls=
  Documentation='https://pdoc3.github.io/pdoc/doc/pdoc/'
  Source='https://github.com/pdoc3/pdoc/'
  Tracker='https://github.com/pdoc3/pdoc/issues'

[options]
install_requires=
  mako
  markdown >= 3.0
setup_requires=
  setuptools_git
  setuptools_scm
include_package_data=True
packages=find:
test-suite=pdoc.test

[options.entry_points]
console_scripts=
  pdoc = pdoc.cli:main
  pdoc3 = pdoc.cli:main

[flake8]
max-line-length = 100

[mypy]
warn_unused_ignores = True
warn_redundant_casts = True
ignore_missing_imports = True

[mypy-pdoc.test.example_pkg.*]
ignore_errors = True
